--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,17 +1,18 @@
 name: Test Project
 on : push
 jobs :
-    runs-on: ubuntu-latest
-    steps:
-        - name: Get code
-          uses: actions/checkout@v4
-        - name: Install nodejs
-          uses: actions/setup-node@v4
-          with:
+    test-job:
+        runs-on: ubuntu-latest
+        steps:
+            - name: Get code
+              uses: actions/checkout@v4
+            - name: Install nodejs
+              uses: actions/setup-node@v4
+              with:
                 node-version: 18
-        - name : Install dependencies
-          run : npm ci
-        - name : Run tests
-          run : npm test
+            - name : Install dependencies
+              run : npm ci
+            - name : Run tests
+              run : npm test
 
         
