--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,7 +1,7 @@
 name: Test Project
 on : push
 jobs :
-    test-job:
+    test:
         runs-on: ubuntu-latest
         steps:
             - name: Get code
@@ -14,5 +14,21 @@ jobs :
               run : npm ci
             - name : Run tests
               run : npm test
+    deploy:
+        runs-on: ubuntu-latest
+        steps:
+            - name: Get code
+              uses: actions/checkout@v4
+            - name: Install nodejs
+              uses: actions/setup-node@v4
+              with:
+                node-version: 18
+            - name : Install dependencies
+              run : npm ci
+            - name : Run BUILD
+              run : npm run build
+            - name : Deploy build
+              run : echo "DEPLOYING....."
+
 
         
