--- a/.github/workflows/output.yml
+++ b/.github/workflows/output.yml
@@ -5,6 +5,6 @@ jobs :
         runs-on: ubuntu-latest
         steps:
             - name: Output context
-              uses: echo "${{toJson(github)}}"
+              run: echo "${{toJson(github)}}"
             
     
